added way to specify custom annotation, bump to version 2.1.0